--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ NEXT_PUBLIC_UTTERANCES_REPO=
 NEXT_PUBLIC_DISQUS_SHORTNAME=
 
 
-MAILCHIMP_API_KEY=
-MAILCHIMP_API_SERVER=
-MAILCHIMP_AUDIENCE_ID=
+MAILCHIMP_API_KEY=d132b7d8d2aa0255aa16fd78ce3ba503-us2
+MAILCHIMP_API_SERVER=us2
+MAILCHIMP_AUDIENCE_ID=759e393024
 
 BUTTONDOWN_API_URL=https://api.buttondown.email/v1/
 BUTTONDOWN_API_KEY=
