--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ MAILCHIMP_API_SERVER=us2
 MAILCHIMP_AUDIENCE_ID=759e393024
 
 BUTTONDOWN_API_URL=https://api.buttondown.email/v1/
-BUTTONDOWN_API_KEY=
+BUTTONDOWN_API_KEY=bf2d44ad-b53f-4357-a410-13ba1319bb68
 
 CONVERTKIT_API_URL=https://api.convertkit.com/v3/
 CONVERTKIT_API_KEY=
